src/components/home/Home.module.scss
// @import "../../variables.modules";

// h1 {
//   font-size: 2rem;
//   text-align: center;
//   @media only screen and (min-width: 940px) {
//     font-size: 3rem;
//     text-align: left;
//   }
// }

// h2 {
//   font-size: 1.25rem;
//   text-align: center;
//   @media only screen and (min-width: 940px) {
//     font-size: 2rem;
//     text-align: left;
//   }
// }

// h3 {
//   font-size: .95rem;
//   text-align: center;
//   overflow-wrap: break-word;
//   hyphens: auto;
//   word-wrap: break-word;
//   @media only screen and (min-width: 940px) {
//     font-size: 1.3rem;
//     text-align: left;
//   }
// }

// .hand {
//   animation-name: wave;
//   animation-duration: 2.5s;
//   animation-iteration-count: infinite;
//   transform-origin: 70% 70%;
//   display: inline-block;
// }

// a {
//   color: $dark;
//   transition: color 200ms ease;
// }

// a:hover {
//   color: $lightgray;
//   transition: color 200ms ease;
// }

// li {
//   display: flex;
//   align-items: center;

//   cursor: pointer;
//   transition: color 200ms ease;
//   color: $dark;

//   &:hover {
//     color: $lightgray;
//   }

//   span {
//     display: flex;
//     align-items: center;
//   }
// }

// @keyframes wave {
//   0% { transform: rotate( 0.0deg) }
//   10% { transform: rotate(14.0deg) }
//   20% { transform: rotate(-8.0deg) }
//   30% { transform: rotate(14.0deg) }
//   40% { transform: rotate(-4.0deg) }
//   50% { transform: rotate(10.0deg) }
//   60% { transform: rotate( 0.0deg) }
//   100% { transform: rotate( 0.0deg) }
// }
@import "../../variables.modules";

h1 {
  font-size: 2rem;
  text-align: center;
  @media only screen and (min-width: 940px) {
    font-size: 3rem;
    text-align: left;
  }
}

h2 {
  font-size: 1.25rem;
  text-align: center;
  @media only screen and (min-width: 940px) {
    font-size: 2rem;
    text-align: left;
  }
}

h3 {
  font-size: .95rem;
  text-align: center;
  overflow-wrap: break-word;
  hyphens: auto;
  word-wrap: break-word;
  @media only screen and (min-width: 940px) {
    font-size: 1.3rem;
    text-align: left;
  }
}

.hand {
  animation-name: wave;
  animation-duration: 2.5s;
  animation-iteration-count: infinite;
  transform-origin: 70% 70%;
  display: inline-block;
}

a {
  color: $dark;
  transition: color 200ms ease;
}

a:hover {
  color: $lightgray;
  transition: color 200ms ease;
}

li {
  display: flex;
  align-items: center;
  cursor: pointer;
  transition: color 200ms ease;
  color: $dark;

  &:hover {
    color: $lightgray;
  }

  span {
    display: flex;
    align-items: center;
  }
}

.resume {
  li {
    display: flex;
    align-items: center;
    gap: 1rem; /* Adjust the spacing between the icon and text */
    font-size: 1rem;
    cursor: pointer;
    transition: color 200ms ease;
    color: $dark;

    &:hover {
      color: $lightgray;
    }

    .resumeIcon {
      display: flex;
      align-items: center;
      justify-content: center;
      font-size: 1.5rem;
      width: 1.5rem; /* Adjust the width of the icon */
      height: 1.5rem; /* Adjust the height of the icon */
      margin-right: 0.48rem;
      @media only screen and (min-width: 940px) {
        margin-right: 0.9rem;
      }
    }

    .resumeText {
      display: flex;
      align-items: center;
    }
  }
}

@keyframes wave {
  0% { transform: rotate( 0.0deg) }
  10% { transform: rotate(14.0deg) }
  20% { transform: rotate(-8.0deg) }
  30% { transform: rotate(14.0deg) }
  40% { transform: rotate(-4.0deg) }
  50% { transform: rotate(10.0deg) }
  60% { transform: rotate( 0.0deg) }
  100% { transform: rotate( 0.0deg) }
}

